[package]
name = "ebustl-parser"
version = "0.6.1"
description = "Parse subtitle files in the EBU-STL format with Rust."
authors = ["Mattias Eriksson <snaggen@mayam.com>"]
original-authors = ["Christophe Augier <christophe.augier@gmail.com>"]
license = "EUPL-1.2"
repository = "https://github.com/snaggen/ebustl-parser"
readme = "README.md"
keywords = ["stl", "subtitle", "parser"]
categories = ["multimedia::video", "parser-implementations"]
edition = "2021"

[dependencies]
chrono = "0.4"
thiserror = "2"                                                               
codepage-strings = "1.0.2"
textcode = "0.2.2"
winnow = "0.7"

[dev-dependencies]
walkdir = "2.5.0"

